[package]
name = "api_nftkeys"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Guimaraes <sekmet@open4g.com>"]

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
marine-rs-sdk = {version = "0.6.13", features = ["logger"]}
log = "0.4.8"
graphql_client = "0.10.0"

[[bin]]
path = "src/main.rs"
name = "api_nftkeys"